--- a/portfolio.html
+++ b/portfolio.html
@@ -159,11 +159,15 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/technocrack450@1x.jpg 1x, ./images/technocrack900@2x.jpg 2x, ./images/technocrack350@1x.jpg 1x, ./images/technocrack700@2x.jpg 2x, ./images/technocrack370@1x.jpg 1x, ./images/technocrack740@2x.jpg 2x" media="" sizes="450px" type=".jpg" />
-                                    <img src="./images/technocrack450@1x.jpg" 
+                                    <source srcset="./images/technocrack450@1x.jpg 1x, ./images/technocrack900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/technocrack350@1x.jpg 1x, ./images/technocrack700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/technocrack370@1x.jpg 1x, ./images/technocrack740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/technocrack450@1x.jpg" 
                                     class="card__picture" 
                                     alt="веб-сайт на экране макбука">
                                 </picture>
+                                
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -178,8 +182,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/poster.jpg" class="card__picture" alt="два баскетболиста в борьбе за мяч"
-                                    width="450" height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="два баскетболиста в борьбе за мяч">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -194,8 +206,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/restaurant.jpg" class="card__picture" alt="логотип ресторана" width="450"
-                                    height="294">
+                                <picture>
+                                    <source srcset="./images/restaurant450@1x.jpg 1x, ./images/restaurant900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/restaurant350@1x.jpg 1x, ./images/restaurant700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/restaurant370@1x.jpg 1x, ./images/restaurant740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/restaurant450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="логотип ресторана">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -210,8 +230,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/project-prime.jpg" class="card__picture" alt="наушники" width="450"
-                                    height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="наушники">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -226,8 +254,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/project-boxes.jpg" class="card__picture" alt="две коробки" width="450"
-                                    height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="две коробки">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -242,8 +278,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/no-borders.jpg" class="card__picture" alt="монитор эпл" width="450"
-                                    height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="монитор эппл">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -258,8 +302,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/limited-edition.jpg" class="card__picture"
-                                    alt="открытая книга лимитированного издания" width="450" height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="открытая книга лимитированного издания">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -274,8 +326,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/lab-project.jpg" class="card__picture" alt="ярлык с надписью" width="450"
-                                    height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="ярлык с надписью">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -290,8 +350,16 @@
                     <li class="portfolio__card-item">
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
-                                <img src="./images/groving-business.jpg" class="card__picture" alt="работа на ноутбуке"
-                                    width="450" height="294">
+                                <picture>
+                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <img 
+                                    src="./images/poster450@1x.jpg" 
+                                    class="card__picture" 
+                                    alt="работа на ноутбуке">
+                                </picture>
+
                                 <div class="card--hover-overlay">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
