--- a/portfolio.html
+++ b/portfolio.html
@@ -231,11 +231,11 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
-                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
-                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <source srcset="./images/project-prime450@1x.jpg 1x, ./images/project-prime900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/project-prime350@1x.jpg 1x, ./images/project-prime700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/project-prime370@1x.jpg 1x, ./images/project-prime740@2x.jpg 2x" media="(min-width:1200px)">
                                     <img 
-                                    src="./images/poster450@1x.jpg" 
+                                    src="./images/project-prime450@1x.jpg" 
                                     class="card__picture" 
                                     alt="наушники">
                                 </picture>
@@ -255,11 +255,11 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
-                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
-                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <source srcset="./images/project-boxes450@1x.jpg 1x, ./images/project-boxes900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/project-boxes350@1x.jpg 1x, ./images/project-boxes700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/project-boxes370@1x.jpg 1x, ./images/project-boxes740@2x.jpg 2x" media="(min-width:1200px)">
                                     <img 
-                                    src="./images/poster450@1x.jpg" 
+                                    src="./images/project-boxes450@1x.jpg" 
                                     class="card__picture" 
                                     alt="две коробки">
                                 </picture>
@@ -279,11 +279,11 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
-                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
-                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <source srcset="./images/no-borders450@1x.jpg 1x, ./images/no-borders900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/no-borders350@1x.jpg 1x, ./images/no-borders700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/no-borders370@1x.jpg 1x, ./images/no-borders740@2x.jpg 2x" media="(min-width:1200px)">
                                     <img 
-                                    src="./images/poster450@1x.jpg" 
+                                    src="./images/no-borders450@1x.jpg" 
                                     class="card__picture" 
                                     alt="монитор эппл">
                                 </picture>
@@ -303,11 +303,11 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
-                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
-                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <source srcset="./images/limited-edition450@1x.jpg 1x, ./images/limited-edition900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/limited-edition350@1x.jpg 1x, ./images/limited-edition700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/limited-edition370@1x.jpg 1x, ./images/limited-edition740@2x.jpg 2x" media="(min-width:1200px)">
                                     <img 
-                                    src="./images/poster450@1x.jpg" 
+                                    src="./images/limited-edition450@1x.jpg" 
                                     class="card__picture" 
                                     alt="открытая книга лимитированного издания">
                                 </picture>
@@ -327,11 +327,11 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
-                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
-                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <source srcset="./images/lab-project450@1x.jpg 1x, ./images/lab-project900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/lab-project350@1x.jpg 1x, ./images/lab-project700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/lab-project370@1x.jpg 1x, ./images/lab-project740@2x.jpg 2x" media="(min-width:1200px)">
                                     <img 
-                                    src="./images/poster450@1x.jpg" 
+                                    src="./images/lab-project450@1x.jpg" 
                                     class="card__picture" 
                                     alt="ярлык с надписью">
                                 </picture>
@@ -351,11 +351,11 @@
                         <a href="#" class="portfolio__card-link">
                             <div class="card">
                                 <picture>
-                                    <source srcset="./images/poster450@1x.jpg 1x, ./images/poster900@2x.jpg 2x" media="(max-width:767px)">
-                                    <source srcset="./images/poster350@1x.jpg 1x, ./images/poster700@2x.jpg 2x" media="(min-width:768px)">
-                                    <source srcset="./images/poster370@1x.jpg 1x, ./images/poster740@2x.jpg 2x" media="(min-width:1200px)">
+                                    <source srcset="./images/groving-business450@1x.jpg 1x, ./images/groving-business900@2x.jpg 2x" media="(max-width:767px)">
+                                    <source srcset="./images/groving-business350@1x.jpg 1x, ./images/groving-business700@2x.jpg 2x" media="(min-width:768px)">
+                                    <source srcset="./images/groving-business370@1x.jpg 1x, ./images/groving-business740@2x.jpg 2x" media="(min-width:1200px)">
                                     <img 
-                                    src="./images/poster450@1x.jpg" 
+                                    src="./images/groving-business450@1x.jpg" 
                                     class="card__picture" 
                                     alt="работа на ноутбуке">
                                 </picture>
