team_cards doing

--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
     <main>
         <section class="hero">
             <div class="hero__conteiner">
-                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
-                <button data-modal-open type="button" class="button__hero">Заказать услугу</button>
+                <div class="hero__wrapper">
+                    <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                    <button data-modal-open type="button" class="button__hero">Заказать услугу</button>
+                </div>
             </div>
         </section>
         <section class="features">
