--- a/index.html
+++ b/index.html
@@ -243,11 +243,9 @@
                     <li class="team-member">
                         <img 
                         srcset="./images/d.team-card1-1X.jpg 270w, ./images/d.team-card1-2X.jpg 540w, ./images/t.team-card1@1x270.jpg 350w, ./images/t.team-card1@2x540.jpg 700w, ./images/m.team-card1-360-1X.jpg 450w, ./images/m.team-card1-720-2X.jpg 900w"
-                        sizes="270px"
                         src="./images/d.team-card1-1X.jpg" 
                         alt="фото Игоря Демьяненко" 
-                        class="team-member__img"
-                        width="270">
+                        class="team-member__img">
                         <h3 class="team-member__name">Игорь Демьяненко</h3>
                         <p lang="en" class="team-member__position">Product Designer</p>
                         <ul class="social-list">
@@ -284,11 +282,9 @@
                     <li class="team-member">
                         <img 
                         srcset="./images/d.team-card2-1X.jpg 270w, ./images/d.team-card2-2X.jpg 540w, ./images/t.team-card2@1x270.jpg 350w, ./images/t.team-card2@2x540.jpg 700w, ./images/m.team-card2-360-1X.jpg 450w, ./images/m.team-card2-720-2X.jpg 900w"
-                        sizes="270px"
                         src="./images/d.team-card2-1X.jpg" 
                         alt="фото Ольги Репиной" 
-                        class="team-member__img"
-                        width="270">
+                        class="team-member__img">
                         <h3 class="team-member__name">Ольга Репина</h3>
                         <p lang="en" class="team-member__position">Frontend Developer</p>
                         <ul class="social-list">
@@ -325,11 +321,9 @@
                     <li class="team-member">
                         <img 
                         srcset="./images/d.team-card3-1X.jpg 270w, ./images/d.team-card3-2X.jpg 540w, ./images/t.team-card3@1x270.jpg 350w, ./images/t.team-card3@2x540.jpg 700w, ./images/m.team-card3-360-1X.jpg 450w, ./images/m.team-card3-720-2X.jpg 900w"
-                        sizes="270px"
                         src="./images/d.team-card3-1X.jpg" 
                         alt="фото Николая Тарасова" 
-                        class="team-member__img"
-                        width="270">
+                        class="team-member__img">
                         <h3 class="team-member__name">Николай Тарасов</h3>
                         <p lang="en" class="team-member__position">Marketing</p>
                         <ul class="social-list">
@@ -366,11 +360,9 @@
                     <li class="team-member">
                         <img 
                         srcset="./images/d.team-card4-1X.jpg 270w, ./images/d.team-card4-2X.jpg 540w, ./images/t.team-card4@1x270.jpg 350w, ./images/t.team-card4@2x540.jpg 700w, ./images/m.team-card4-360-1X.jpg 450w, ./images/m.team-card4-720-2X.jpg 900w"
-                        sizes="270px"
                         src="./images/d.team-card4-1X.jpg" 
                         alt="фото Михаила Урмакова" 
-                        class="team-member__img"
-                        width="270">
+                        class="team-member__img">
                         <h3 class="team-member__name">Михаил Ермаков</h3>
                         <p lang="en" class="team-member__position">UI Designer</p>
                         <ul class="social-list">
